<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter your password</string>
    <string name="create">Create</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_page_description">Welcome to the Shoe Store app: your easy, paperless shoe inventory solution</string>
    <string name="how_it_works">How it works</string>
    <string name="instruction_1">Simply tap the floating + button on your inventory list screen</string>
    <string name="instruction_2">Add your shoe details in the input fields and save!</string>
    <string name="c0ntinue">Continue</string>
    <string name="to_the_list">To the list</string>
    <string name="shoe_size_var">Size: %1$s</string>
    <string name="no_shoes_added">No shoes added :(</string>
    <string name="logout">Logout</string>
    <string name="add_a_shoe">Add a shoe</string>
    <string name="name_required">Name*:</string>
    <string name="shoe_name">Shoe name</string>
    <string name="size_required">Size*:</string>
    <string name="add_shoe_button">Add shoe button</string>
    <string name="company_required">Company*:</string>
    <string name="shoe_brand">Shoe brand</string>
    <string name="description">Description:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="size">Size</string>
    <string name="image_of_a_plus_icon">Image of a plus icon</string>
    <string name="image_of_a_save_icon">Image of a save icon</string>

</resources>
