<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.models.ShoeListViewModel" />
    </data>

<!--    I am using constraint layout here because it allows me to organize my views
conveniently without having to use multiple linear layouts-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/details_screen_background">

        <TextView
            android:id="@+id/add_shoe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/page_header_style"
            android:text="@string/add_a_shoe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/name"
            tools:ignore="MissingConstraints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_required"
            style="@style/page_subheader_style"
            app:layout_constraintTop_toBottomOf="@id/add_shoe_title"
            android:layout_marginStart="25dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_name"
            android:layout_width="250dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/name"
            android:layout_marginStart="20dp"
            android:background="@drawable/card_shape"
            android:maxLength="20"
            android:hint="@string/shoe_name"
            style="@style/basic_text_style"
            android:text="@={viewModel.newShoe.name}"/>

        <TextView
            android:id="@+id/size"
            tools:ignore="MissingConstraints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_required"
            style="@style/page_subheader_style"
            app:layout_constraintTop_toBottomOf="@id/enter_name"
            android:layout_marginStart="25dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_size"
            android:layout_width="250dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/size"
            app:layout_constraintStart_toStartOf="@id/enter_name"
            android:background="@drawable/card_shape"
            android:hint="@string/size"
            style="@style/basic_text_style"
            android:inputType="numberDecimal"
            android:text="@={viewModel.sizeString}"/>

        <TextView
            android:id="@+id/company"
            tools:ignore="MissingConstraints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_required"
            style="@style/page_subheader_style"
            app:layout_constraintTop_toBottomOf="@id/enter_size"
            android:layout_marginStart="25dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_company"
            android:layout_width="250dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/company"
            app:layout_constraintStart_toStartOf="@id/enter_size"
            android:background="@drawable/card_shape"
            android:maxLength="20"
            android:hint="@string/shoe_brand"
            style="@style/basic_text_style"
            android:text="@={viewModel.newShoe.company}"/>

        <TextView
            android:id="@+id/description"
            tools:ignore="MissingConstraints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="@style/page_subheader_style"
            app:layout_constraintTop_toBottomOf="@id/enter_company"
            android:layout_marginStart="25dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="@id/enter_company"
            android:background="@drawable/card_shape"
            android:hint="@string/description"
            style="@style/basic_text_style"
            android:inputType="textMultiLine"
            android:text="@={viewModel.newShoe.description}"
            android:maxLines="5"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="@{() -> viewModel.addShoe()"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
