<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginFragment"
            type="com.udacity.shoestore.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/shoes_on_line">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_text"
            style="@style/login_page_instruction"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:text="@string/enter_email"
            app:layout_constraintStart_toStartOf="@id/enter_email"
            app:layout_constraintTop_toBottomOf="@id/login_title" />

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/design_default_color_secondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text" />

        <TextView
            android:id="@+id/password_text"
            style="@style/login_page_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/enter_password"
            app:layout_constraintStart_toStartOf="@id/enter_password"
            app:layout_constraintTop_toBottomOf="@id/enter_email" />

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/design_default_color_secondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_text"

            />

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/stylish"
            android:text="@string/create"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{() -> loginFragment.goToWelcome()}"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/stylish"
            android:text="@string/login"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="298dp"
            tools:layout_editor_absoluteY="658dp"
            android:onClick="@{() -> loginFragment.goToWelcome()}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
