<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/instructions_screen_background">

            <TextView
                android:id="@+id/instruction_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_it_works"
                style="@style/page_header_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/instruction_1"
                style="@style/basic_text_style"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/instruction_1"
                tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp"
                app:layout_constraintTop_toTopOf="@id/instruction_heading"
                android:layout_marginTop="150dp"/>

            <!--todo add screen shots of app to image view-->

            <ImageView
                android:id="@+id/image_1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_add"
                app:layout_constraintStart_toEndOf="@id/instruction_1"
                app:layout_constraintTop_toTopOf="@id/instruction_1"/>

            <TextView
                android:id="@+id/instruction_2"
                style="@style/basic_text_style"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/instruction_2"
                android:layout_marginStart="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instruction_1"
                android:layout_marginTop="150dp"/>

            <ImageView
                android:id="@+id/image_2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_add"
                app:layout_constraintStart_toEndOf="@id/instruction_2"
                app:layout_constraintTop_toTopOf="@id/instruction_2"
                app:layout_constraintBottom_toTopOf="@id/continue_button"/>

            <Button
                android:id="@+id/continue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button_style"
                android:text="@string/to_the_list"
                android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
                app:layout_constraintTop_toBottomOf="@id/image_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="1"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
